# Final-ZK-Project

./: Cargo.toml  credentials_12345.json  demo.sh
client/: Cargo.toml  credentials_Alice.json  credentials_Bob.json  credentials_Charlie.json
client/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  merkle.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
server/: Cargo.toml  callback_ledger.json  posts.json
server/src/: main.rs
src/: Cargo.toml
