[package]
name = "group"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "methods",
    "server",
    "client",
]

[build-dependencies]
risc0-build = { version = "1.2.4" }

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
k256 = "0.13"
rand = {version="0.8",features=["getrandom"]}
rand_core = "0.6"
risc0-zkvm = { version = "1.2.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
group-methods = { path = "methods" }
group-core = { path = "core" }

[features]
default = []
