[package]
name = "group-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
k256 = "0.13"
rand = {version = "0.8", features = ["getrandom"]}
rand_core = "0.6"
risc0-zkvm = { version = "1.2.4" }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
