[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
sha2 = "0.10"
bincode = "1.3"
group-core = { path = "../core" }
