[package]
name = "group"
version = "0.1.0"
edition = "2021"

[dependencies]
k256="0.13"
methods = { path = "../methods" }
rand = {version="0.8",features=["getrandom"]}
rand_core = "0.6"
risc0-zkvm = { version = "1.2.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
